--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "source": "app.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "parcel index.html --port 3000",
     "build": "parcel build index.html",
     "clean": "powershell Remove-Item -Recurse -Force dist",
@@ -21,7 +22,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router": "^6.30.1",
+    "react-router": "^7.9.4",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
